k8s/public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-dashboard
  namespace: mff
  labels:
    app: minecraft-dashboard
spec:
  type: ClusterIP
  selector:
    app: minecraft-dashboard
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
