k8s/ingress-status.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-dashboard
  namespace: mff
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.org/limit-req-rate: "10r/s"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - status.mff-server.com
    secretName: status-mff-server-tls
  rules:
  - host: status.mff-server.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft-dashboard
            port:
              number: 80
